--- a/rnaseq_analyses/GOBS_MyConnectome_analysis.Rmd
+++ b/rnaseq_analyses/GOBS_MyConnectome_analysis.Rmd
@@ -32,7 +32,7 @@ thresh=0.1
 #      'SMhand':10,
 #      'CinguloParietal':11,
 #      'RetrosplenialTemporal':12}
-gobs_netnames=c('Default','Auditory','FrontoParietal','Visual','Dorsal Attention','Somatomotor mouth','Ventral Attention','Salience','Cingulo-opercular','Somatomotor hand','Cingulo-parietal','Retrosplenial-Temporal')
+gobs_netnames=c('Default','Auditory','Fronto-Parietal','Visual','Dorsal Attention','Somatomotor mouth','Ventral Attention','Salience','Cingulo-opercular','Somatomotor hand','Cingulo-parietal','Retrosplenial-Temporal')
 gobs_p_mtx = matrix(data=NA,ncol=length(unique(gobs$trt2)),nrow=12)
 gobs_cor_mtx = matrix(data=NA,ncol=length(unique(gobs$trt2)),nrow=12)
 for (i in 1:12) {
@@ -54,7 +54,7 @@ gobs_bh_mtx=matrix(p.adjust(gobs_p_mtx,method='BH'),nrow=nrow(gobs_p_mtx),ncol=n
 Load myconnectome data
 ```{r}
 wincorr.wgcna=read.table('/Users/poldrack/Dropbox/data/selftracking/timeseries_analyses/out.dat.wgcna_wincorr.txt')
-myc_netnames=c("Default","Second Visual","Frontal-Parietal","First Visual","First Dorsal Attention","6:Second Dorsal Attention","Ventral Attention-Language","Salience","Cingulo-opercular","Somatomotor","Frontal-Parietal-Other","Medial Parietal","Parieto Occipital")
+myc_netnames=c("Default","Second Visual","Fronto-Parietal","First Visual","First Dorsal Attention","6:Second Dorsal Attention","Ventral Attention-Language","Salience","Cingulo-opercular","Somatomotor","Frontal-Parietal-Other","Medial Parietal","Parieto Occipital")
 
 
 wincorr.wgcna$yvar=as.character(wincorr.wgcna$yvar)
@@ -151,19 +151,31 @@ for (i in 1:38){
 
 cluster_terms=as.character(read.table('http://s3.amazonaws.com/openfmri/ds031/RNA-seq/module_descriptions.txt',header=FALSE,sep='\t')$V2)
 
+gobs_cor_mtx_thresh=gobs_cor_mtx_matched
+gobs_cor_mtx_thresh[which(gobs_bh_mtx_matched>0.1)]=0
+gobs_cor_mtx_thresh[which(gobs_cor_mtx_thresh>0)]=1
+gobs_cor_mtx_thresh[which(gobs_cor_mtx_thresh<0)]=-1
+
+myc_cor_mtx_thresh=myc_cor_mtx_matched
+myc_cor_mtx_thresh[which(myc_bh_mtx_matched>0.1)]=0
+myc_cor_mtx_thresh[which(myc_cor_mtx_thresh>0)]=1
+myc_cor_mtx_thresh[which(myc_cor_mtx_thresh<0)]=-1
+
+my_palette <- colorRampPalette(c("blue", "gray", "red"))(n = 299)
+
 library(plot3D)
-pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/gobs_expression_heatmap_matched.pdf',width=18,height=12)
-heatmap.2(gobs_cor_mtx_matched,Rowv=NULL,Colv=NULL,trace='none',colsep=c(1:38),
-          cellnote=t(gobs_sigmtx),notecex=3,notecol='white',rowsep=c(1:8),
+pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/gobs_expression_heatmap_matched.pdf',width=18,height=8)
+heatmap.2(gobs_cor_mtx_thresh,Rowv=NULL,Colv=NULL,trace='none',colsep=c(1:38),
+          notecex=3,notecol='white',rowsep=c(1:8),
           labRow=gobs_netnames[which(matching_net==1)],labCol=cluster_terms,
-          margins=c(18,18),col=jet.col,cexRow=1.5,cexCol=1.4)
+          margins=c(18,18),col=my_palette,cexRow=1.5,cexCol=1.4,key=FALSE)
 dev.off()
 
-pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/myc_expression_heatmap_matched.pdf',width=18,height=12)
-heatmap.2(myc_cor_mtx_matched,Rowv=NULL,Colv=NULL,trace='none',colsep=c(1:38),
-          cellnote=t(myc_sigmtx),notecex=3,notecol='white',rowsep=c(1:8),
+pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/myc_expression_heatmap_matched.pdf',width=18,height=8)
+heatmap.2(myc_cor_mtx_thresh,Rowv=NULL,Colv=NULL,trace='none',colsep=c(1:38),
+          notecol='white',rowsep=c(1:8),
           labRow=myc_netnames[which(matching_net==1)],labCol=NULL,
-          margins=c(18,18),col=jet.col,cexRow=1.5)
+          margins=c(18,18),col=my_palette,cexRow=1.5,key=FALSE)
 dev.off()
 
 ```
