--- a/rnaseq_analyses/Run_WGCNA.Rmd
+++ b/rnaseq_analyses/Run_WGCNA.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 
-This code loads the variance stabilized data (residualized against RIN) and performs weighted gene coexpression network analysis (WGCNA).
+This code loads the variance stabilized data (residualized against RIN and the first 3 PCs across subjects) and performs weighted gene coexpression network analysis (WGCNA).
 
 First load the library:
 ```{r messs}
@@ -18,7 +18,7 @@ library(knitr)
 
 ####Load the data
 ```{r}
-vsdata=read.table('http://s3.amazonaws.com/openfmri/ds031/RNA-seq/varstab_data_rinregressed.txt')
+vsdata=read.table('/Users/poldrack/data/selftracking/rna-seq/varstab_data_prefiltered_rin_3PC_regressed.txt') #'http://s3.amazonaws.com/openfmri/ds031/RNA-seq/varstab_data_rin_3PC_regressed.txt')
 datExpr=t(vsdata)
 ```
 
@@ -33,9 +33,10 @@ sft = pickSoftThreshold(datExpr, powerVector = powers, verbose = 5)
 
 #### Plot the results to examine the scale-free topology metric:
 
-sizeGrWindow(9, 5)
+
 
 ```{r}
+sizeGrWindow(9, 5)
 par(mfrow = c(1,2));
 
 cex1 = 0.9;
@@ -46,7 +47,7 @@ main = paste("Scale independence"));
 text(sft$fitIndices[,1], -sign(sft$fitIndices[,3])*sft$fitIndices[,2],
 labels=powers,cex=cex1,col="red");
 
-abline(h=0.80,col="red")
+abline(h=0.90,col="red")
 
 plot(sft$fitIndices[,1], sft$fitIndices[,5],
 xlab="Soft Threshold (power)",ylab="Mean Connectivity", type="n",
@@ -56,18 +57,17 @@ text(sft$fitIndices[,1], sft$fitIndices[,5], labels=powers, cex=cex1,col="red")
 
 ```
 
-Based on these results, we choose power=8 to obtain fit of r^2=0.8
+Based on these results, we choose power=8 to obtain fit of r^2~0.8
 
 ####Run WGCNA estimation
 
 ```{r}
 
 net = blockwiseModules(datExpr, power = 8,corType='bicor',
-TOMType = "unsigned", minModuleSize = 10,
-reassignThreshold = 0, mergeCutHeight = 0.25,
+TOMType = "unsigned", minModuleSize = 20,
+reassignThreshold = 1e-6, mergeCutHeight = 0.15,
 numericLabels = TRUE, pamRespectsDendro = FALSE,
-saveTOMs = TRUE,
-saveTOMFileBase = "exprTOM",
+saveTOMs = FALSE,
 verbose = 3,maxBlockSize=4000)
 
 ```
@@ -76,11 +76,11 @@ verbose = 3,maxBlockSize=4000)
 This can be turned on by setting save_data=TRUE
 
 ```{r}
-save_data=FALSE
+save_data=TRUE
 
 if (save_data) {
-  save(net,file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/net-thr8-rinreg-48sess.Rdata')
-  write.table(net$MEs, file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/MEs-thr8-rinreg-48sess.txt',row.names=FALSE,col.names=TRUE)
+  save(net,file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/net-thr8-prefilt-rinPCreg-48sess.Rdata')
+  write.table(net$MEs, file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/MEs-thr8-prefilt-rinPCreg-48sess.txt',row.names=FALSE,col.names=TRUE)
 }
 ```
 
@@ -93,6 +93,13 @@ plotDendroAndColors(net$dendrograms[[1]], mergedColors[net$blockGenes[[1]]],
 "Module colors",
 dendroLabels = FALSE, hang = 0.03,
 addGuide = TRUE, guideHang = 0.05)
+pdf('/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/wgcna_tree.pdf')
+mergedColors = labels2colors(net$colors)
+plotDendroAndColors(net$dendrograms[[1]], mergedColors[net$blockGenes[[1]]],
+"Module colors",
+dendroLabels = FALSE, hang = 0.03,
+addGuide = TRUE, guideHang = 0.05)
+dev.off()
 
 ```
 
@@ -103,7 +110,7 @@ addGuide = TRUE, guideHang = 0.05)
 modules=as.data.frame(net$colors)
 row.names(modules)=row.names(vsdata)
 if (save_data) {
-  write.table(modules,file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/module_assignments.txt',col.names=FALSE,row.names=TRUE,quote=FALSE)
+  write.table(modules,file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/module_assignments_thr8_prefilt_rinPCreg.txt',col.names=FALSE,row.names=TRUE,quote=FALSE)
 }
 ```
 
@@ -122,7 +129,8 @@ for (i in 1:(ncol(skme)-1)) {
 	}
 kable(as.data.frame(hubgenes))
 if (save_data) {
-  write.table(hubgenes,file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/hubgenes.txt',col.names=FALSE,row.names=TRUE,quote=FALSE)
+  write.table(hubgenes,file='/Users/poldrack/Dropbox/data/selftracking/rna-seq/WGCNA/hubgenes_thr8_prefilt_rinPCreg.txt',col.names=FALSE,row.names=TRUE,quote=FALSE)
 }
+
 
 ```
