--- a/myconnectome/rnaseq/Snyderome_data_preparation.Rmd
+++ b/myconnectome/rnaseq/Snyderome_data_preparation.Rmd
@@ -7,9 +7,9 @@ output: html_document
 
 # Commparison of MyConnectome to Snyderome RNA-seq data
 
-The Snyderome RNA-seq data were obtained from [GEO](http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE33029).  
+Code available at: [https://github.com/poldrack/myconnectome/blob/master/myconnectome/rnaseq/Snyderome_data_preparation.Rmd](https://github.com/poldrack/myconnectome/blob/master/myconnectome/rnaseq/Snyderome_data_preparation.Rmd)
 
-## First prepare Snyderome data
+The Snyderome RNA-seq data were obtained from [GEO](http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE33029).  
 
 ```{r setup, echo=FALSE,message=FALSE}
 basedir=Sys.getenv('MYCONNECTOME_DIR')
